# hallelujah

./: .gitignore  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: desktop.yml  sidecars.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/sidecar/: health.rs  mod.rs  registry.rs  spawn.rs
apps/desktop/src/app/: App.css  App.tsx
apps/desktop/src/components/: ArchitectureDiagram.tsx  SidecarGrid.tsx  TrafficLog.tsx
apps/desktop/src/hooks/: useDataFlow.ts
apps/desktop/src/lib/: sidecars.ts  traffic.ts
apps/desktop/src/lib/api/: index.ts
docs/: 01_tauri_learning_stack_report.md  02_monorepo_folder_structure.md  03_axum_sidecar.md  04_sidecar_port_registry.md  05_tauri_sidecar_lifecycle.md  06_dev_workflow.md  07_data_flow_monitor_ui.md  08_cors_and_webview_fetch.md  09_sidecar_binary_build.md  10_api_client_package.md  11_sidecar_api_contract.md  12_troubleshooting.md  readme.md
examples/axum/260627_0832_axum-receive/: README.md  received.jsonl
examples/axum/260627_0832_axum-receive/src/: main.rs
examples/axum/260628_0831_axum-send/src/: main.rs
examples/axum/260629_0024_axum/: Cargo.toml  README.md
examples/express/260629_0024_express/: pnpm-lock.yaml
examples/express/260629_0024_express/src/: app.ts  peer.ts  types.ts
examples/tokio/130629_0041_rs/datatypes/: Cargo.toml
examples/tokio/130629_0041_rs/function-closures/: Cargo.toml
examples/tokio/130629_0041_rs/function-closures/examples/: 02_expressions_statements.rs  04_fn_traits.rs  07_iterator_adapters.rs
examples/tokio/130629_0041_rs/function-closures/src/: main.rs
examples/tokio/130629_0041_rs/hello-rust/: Cargo.toml
examples/tokio/130629_0041_rs/hello-rust/examples/: 03_data_types_intro.rs  04_cargo_tools_demo.rs
examples/tokio/130629_0041_rs/mutex-semaphore-monitor/: Cargo.toml  README.md
examples/tokio/130629_0041_rs/mutex-semaphore-monitor/examples/: 02_mutex_poison.rs
examples/tokio/130629_0041_rs/mutex-semaphore-monitor/src/: semaphore.rs
examples/tokio/130629_0041_rs/variables-controlflow/: README.md
examples/tokio/130629_0041_rs/variables-controlflow/examples/: 02_scalar_types.rs  03_compound_types.rs  04_shadowing.rs  08_fibonacci.rs  10_type_inference.rs
examples/tokio/130629_0041_rs/variables-controlflow/src/: main.rs
examples/tokio/140629_0048_tokio_example/: Cargo.toml
examples/tokio/140629_0048_tokio_example/examples/: 01_hello_async.rs  02_spawn_tasks.rs  04_join_macro.rs  05_select_basics.rs  06_interval.rs  07_timeout.rs  09_spawn_blocking.rs  10_async_mutex.rs  12_watch_channel.rs  13_rwlock_shared_cache.rs  15_join_set.rs  17_task_cancellation.rs  22_tcp_chat_server.rs  25_cancellation_token_tree.rs  29_async_process_pipeline.rs
labs/axum/260627_0832_axum-receive/: Cargo.toml
labs/axum/260628_0831_axum-send/: Cargo.toml  README.md
labs/axum/260629_0024_axum/src/: main.rs
labs/express/260629_0024_express/: package.json
labs/express/260629_0024_express/src/: index.ts
labs/tokio/130629_0041_rs/datatypes/src/: lib.rs
labs/tokio/130629_0041_rs/function-closures/: README.md
labs/tokio/130629_0041_rs/function-closures/examples/: 01_functions_basics.rs  03_closures_basics.rs  05_move_closures.rs  06_iterators_basics.rs  08_higher_order_functions.rs  09_factorial.rs  10_fold_and_scan.rs
labs/tokio/130629_0041_rs/hello-rust/: README.md
labs/tokio/130629_0041_rs/hello-rust/examples/: 01_hello_world.rs  02_print_variants.rs  05_chrono_timestamp.rs  06_compilation_model.rs
labs/tokio/130629_0041_rs/hello-rust/src/: main.rs
labs/tokio/130629_0041_rs/mutex-semaphore-monitor/examples/: 01_mutex_basics.rs  03_semaphore.rs  04_monitor_condvar.rs  05_monitor_bounded_buffer.rs
labs/tokio/130629_0041_rs/mutex-semaphore-monitor/src/: main.rs
labs/tokio/130629_0041_rs/tutorial/: Cargo.toml
labs/tokio/130629_0041_rs/tutorial/examples/: 01_hello_world.rs
labs/tokio/130629_0041_rs/tutorial/src/: lib.rs
labs/tokio/130629_0041_rs/variables-controlflow/: Cargo.toml
labs/tokio/130629_0041_rs/variables-controlflow/examples/: 01_let_mut_const.rs  05_if_else.rs  06_loops.rs  07_match_patterns.rs  09_temperature_converter.rs
labs/tokio/140629_0048_tokio_example/: Cargo.toml
labs/tokio/140629_0048_tokio_example/examples/: 03_sleep_and_delay.rs  08_mpsc_channel.rs  11_broadcast_channel.rs  14_semaphore_limit.rs  16_try_join.rs  18_notify_condition.rs  19_barrier_sync.rs  20_tcp_echo.rs  21_graceful_shutdown.rs  23_worker_pool_backpressure.rs  24_task_supervisor.rs  26_rate_limited_gateway.rs  27_async_file_processor.rs  28_framed_protocol.rs  30_production_tcp_server.rs
scripts/: build-sidecars.sh  check-ports.mjs  dev.sh  ensure-sidecar-binaries.sh  free-sidecar-ports.sh  wait-for-sidecars.sh
services/axum/: Cargo.toml  Makefile
services/axum/src/: main.rs
services/express/: package.json
services/express/scripts/: build-sidecar.mjs
services/express/src/: app.ts  index.ts
services/express/src/routes/: meta.ts
services/fastapi/: pyproject.toml
services/fastapi/app/: main.py
services/fastapi/app/routers/: meta.py
services/fastapi/scripts/: build-sidecar.sh
services/gin/: Makefile  go.mod
services/gin/cmd/server/: main.go
services/gin/internal/config/: config.go
services/gin/internal/handler/: health.go  meta.go
services/gin/internal/middleware/: cors.go
services/gin/internal/router/: router.go
services/nest/: package.json
services/nest/apps/admin-web/: index.html  package.json  tsconfig.json  vite.config.ts
services/nest/apps/admin-web/src/: App.tsx
services/nest/apps/api/: package.json
services/nest/apps/api/src/: main.ts
services/nest/apps/api/src/health/: health.controller.ts
services/nest/scripts/: build-sidecar.mjs
tools/sidecar-registry/: generate.mjs
