[package]
name = "sc-axum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sc-axum"
path = "src/main.rs"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
