[package]
name = "example-axum-receive"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example-axum-receive"
path = "src/main.rs"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync"] }
tower-http = { version = "0.6", features = ["cors"] }
