[package]
name = "example-axum-send"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "example-axum-send"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
